updated cards to look beautiful with nice transition, absolute position float hack used to fix collapsed borders

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -229,15 +229,31 @@ body {
 
 .card {
   perspective: 150rem;
-  -moz-perspective: 150rem; }
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; }
   .card__side {
-    background-color: orangered;
     height: 50rem;
-    transition: all .8s;
+    transition: all .8s ease;
     color: #fff;
-    font-size: 2rem; }
-  .card:hover .card__side {
+    font-size: 2rem;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0%;
+    backface-visibility: hidden;
+    border-radius: .3rem;
+    box-shadow: 0 1.5rem 0.4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb990, #ff7730); }
+  .card:hover .card__side--front {
     transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
 
 .header {
   height: 95vh;
