--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,10 +3,16 @@ $light-green: #7ed56f;
 $mid-green: #55c57a;
 $dark-green: #28b485;
 
+$color-secondary-light: #ffb990;
+$color-secondary-dark: #ff7730;
+
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643ff;
+
 $color-grey: #777;
+$color-grey-light-1: #f7f7f7;
 $color-white: #fff;
 $color-black: #000;
-$color-grey-light-1: #f7f7f7;
 
 // FONT
 $default-font-size: 1.6rem;
