--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,18 +1,44 @@
 .card {
+    
     perspective: 150rem;
     -moz-perspective: 150rem;
+    position: relative;
+    height: 50rem;
 
 
     &__side {
-        background-color: orangered;
+        
         height: 50rem;
-        transition: all .8s;
+        transition: all .8s ease;
         color: #fff;
         font-size: 2rem;
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0%;
+        backface-visibility: hidden;
+        border-radius: .3rem;
+        box-shadow: 0 1.5rem .4rem rgba($color-black,  .15);
+
+        &--front {
+            background-color: $color-white;
+
+            
+        }
+        &--back {
+
+            transform: rotateY(180deg);
+
+            &-1 {
+                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
+
+            }
+        }
     }
-
-
-    &:hover &__side{
+    &:hover &__side--front{
         transform: rotateY(180deg);
+    }
+    &:hover &__side--back{
+        transform: rotateY(0);
     }
 }
